add forecast data and functions

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <button type="submit" id="search-btn">Search</button>
         </form>
 
-        <div>
+        <div id="city-history">
           <h3>City Search History:</h3>
           <!-- Javascript insert -->
         </div>
