fixed forecast container extending past 5 days, set innerhtml to reset

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <h1>Weather Dashboard</h1>
     </header>
 
-    <main>
+    <main id="maincontainer">
       <aside>
         <!-- Search city -->
         <h3>Search city:</h3>
