add more styling

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <input placeholder="Enter city name" type="text" id="search-input" />
           <button type="submit" id="search-btn">Search</button>
         </form>
-
+        <hr>
         <div id="city-history">
           <h3>City Search History:</h3>
           <!-- Javascript insert -->
@@ -28,7 +28,7 @@
       </aside>
 
       <section>
-        <div>
+        <div id="current-weather">
           <!-- Current weather of city -->
           <h2 id="selected-city-name"></h2>
           <p>Temp: <span id="temp-current"></span></p>
